--- a/index.html
+++ b/index.html
@@ -4,13 +4,21 @@
         <script>
             function display()
             {
-                let name=document.getElementById("text").value
-                alert(name)
-            }     
+                let name = document.getElementById("text").value
+                if(name.length==0)
+                {
+                    alert("Enter Name")
+                    document.getElementById("text").focus()
+                }
+                else
+                {
+                  alert(name)
+                }
+            }
         </script>
     </head>
     <body>
-        Enter your Name<input type="text" id="text"/><br/>
-        <button>Display</button>
+       Enter Your Name<input type="text" id="text"/><br/>
+       <button onclick="display()">Display</button>
     </body>
 </html>
